--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -11,8 +11,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.7.4",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   }
 }
-
-npm i typescript @types/node -D
