--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/node": "^22.7.4",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "fastify": "^5.0.0"
   }
 }
