--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "fastify": "^5.0.0"
+    "fastify": "^5.0.0",
+    "zod": "^3.23.8"
   }
 }
