--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.7.4",
+    "prisma": "^5.20.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   },
