Correcao do nome do banco de dados

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # usuario:senha do postgresql = postgres:1234
-DATABASE_URL="postgresql://postgres:1234@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres:1234@localhost:5432/dbaula?schema=public"
