--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "fastify": "^5.0.0",
     "zod": "^3.23.8"
   }
